Fix deletion of time intervals
RISDEV-3743